// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion should render no items 1`] = `
<div
  className="accordion"
  role="tablist"
/>
`;

exports[`Accordion should render no items 2`] = `
<div
  className="accordion"
  role="tablist"
>
  
</div>
`;

exports[`Accordion should render no items 3`] = `
<div
  className="accordion"
  role="tablist"
>
  
</div>
`;

exports[`Accordion should render no items 4`] = `
<div
  className="accordion"
  role="tablist"
>
  
</div>
`;

exports[`Accordion should render no items 5`] = `
<div
  className="accordion"
  role="tablist"
>
  
</div>
`;

exports[`Accordion should render properly 1`] = `
<div
  className="accordion"
  role="tablist"
>
  <div
    aria-expanded={false}
    className="panel"
    role="tabpanel"
  >
    <button
      className="panel__head"
      onClick={[Function]}
      role="tab"
    >
      <time>
        12-10-2018
      </time>
      <small>
        -
      </small>
      <strong>
        Awesome title
      </strong>
    </button>
    <div
      aria-hidden={true}
      className="panel__body"
      style={
        Object {
          "height": "0px",
        }
      }
    >
      <div
        className="panel__content"
      >
        <p>
          Fantastic content
        </p>
      </div>
    </div>
  </div>
  <div
    aria-expanded={false}
    className="panel"
    role="tabpanel"
  >
    <button
      className="panel__head"
      onClick={[Function]}
      role="tab"
    >
      <time>
        13-10-2018
      </time>
      <small>
        -
      </small>
      <strong>
        Awesome title
      </strong>
    </button>
    <div
      aria-hidden={true}
      className="panel__body"
      style={
        Object {
          "height": "0px",
        }
      }
    >
      <div
        className="panel__content"
      >
        <p>
          Fantastic content
        </p>
      </div>
    </div>
  </div>
  <div
    aria-expanded={false}
    className="panel"
    role="tabpanel"
  >
    <button
      className="panel__head"
      onClick={[Function]}
      role="tab"
    >
      <time>
        13-10-2018
      </time>
      <small>
        -
      </small>
      <strong>
        Awesome title
      </strong>
    </button>
    <div
      aria-hidden={true}
      className="panel__body"
      style={
        Object {
          "height": "0px",
        }
      }
    >
      <div
        className="panel__content"
      >
        <p>
          Fantastic content
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion should render properly 2`] = `
<div
  className="accordion"
  role="tablist"
>
  <div
    aria-expanded={false}
    className="panel"
    role="tabpanel"
  >
    <button
      className="panel__head"
      onClick={[Function]}
      role="tab"
    >
      <time>
        12-10-2018
      </time>
      <small>
        -
      </small>
      <strong>
        Awesome title
      </strong>
    </button>
    <div
      aria-hidden={true}
      className="panel__body"
      style={
        Object {
          "height": "0px",
        }
      }
    >
      <div
        className="panel__content"
      >
        <p>
          Fantastic content
        </p>
      </div>
    </div>
  </div>
  <div
    aria-expanded={false}
    className="panel"
    role="tabpanel"
  >
    <button
      className="panel__head"
      onClick={[Function]}
      role="tab"
    >
      <time>
        13-10-2018
      </time>
      <small>
        -
      </small>
      <strong>
        Awesome title
      </strong>
    </button>
    <div
      aria-hidden={true}
      className="panel__body"
      style={
        Object {
          "height": "0px",
        }
      }
    >
      <div
        className="panel__content"
      >
        <p>
          Fantastic content
        </p>
      </div>
    </div>
  </div>
  <div
    aria-expanded={false}
    className="panel"
    role="tabpanel"
  >
    <button
      className="panel__head"
      onClick={[Function]}
      role="tab"
    >
      <time>
        13-10-2018
      </time>
      <small>
        -
      </small>
      <strong>
        Awesome title
      </strong>
    </button>
    <div
      aria-hidden={true}
      className="panel__body"
      style={
        Object {
          "height": "0px",
        }
      }
    >
      <div
        className="panel__content"
      >
        <p>
          Fantastic content
        </p>
      </div>
    </div>
  </div>
</div>
`;
